--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -75,7 +75,7 @@ jobs:
         uses: mavrosxristoforos/get-xml-info@1.0
         with:
           xml-file: "${{ env.COVERAGE_FILE }}"
-          xpath: '/CoverageSession/Summary[@sequenceCoverage]'
+          xpath: '//Summary[@sequenceCoverage]'
       
       - name: branchCoverage
         uses: mavrosxristoforos/get-xml-info@1.0
