--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -90,4 +90,4 @@ jobs:
       - name: Assert Coverage
         run: |
           python3 -c "assert ${{ env.SEQUENCE_COVERAGE }} >= 95, 'Sequence coverage must be at least 95%, is only ${{ env.SEQUENCE_COVERAGE }}%'"
-          python3 -c "assert ${{ env.BRANCH_COVERAGE }} >= 95, 'Branch coverage must be at least 95%, is only ${{ BRANCH_COVERAGE }}%'"
+          python3 -c "assert ${{ env.BRANCH_COVERAGE }} >= 95, 'Branch coverage must be at least 95%, is only ${{ env.BRANCH_COVERAGE }}%'"
