--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,9 +1,11 @@
 name: dotnet-format
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
+    branches:
+    - '**'      # matches every branch
+  pull-request:
     branches:
     - '**'      # matches every branch
 
