--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,5 +24,9 @@ jobs:
           dotnet-version: 3.1.301
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/github-script@v3
+      - id: commited-files
+        with:
+          script: git diff --name-only --cached --diff-filter=d HEAD^ HEAD | sed ':a;N;$!ba;s/\n/;/g
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
       - run: dotnet format . --folder --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
