--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -25,8 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/github-script@v3
-      - id: commited-files
+        id: commited-files
         with:
           script: git diff --name-only --cached --diff-filter=d HEAD^ HEAD | sed ':a;N;$!ba;s/\n/;/g
+          result-encoding: string
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
-      - run: dotnet format . --folder --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
+      - run: dotnet format . --folder --include "${{steps.commited-files.outputs.result}}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
