--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,8 +26,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/github-script@v3
         id: commited-files
-        with:
-          script: git diff --name-only HEAD^ HEAD | sed ':a;N;$!ba;s/\n/;/g
-          result-encoding: string
+        run: git diff --name-only HEAD^ HEAD | sed ':a;N;$!ba;s/\n/;/g
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
       - run: dotnet format . --folder --include "${{steps.commited-files.outputs.result}}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
