--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: "list commited files"
         id: commited-files
-        run: echo "::set-env name=COMMITED_FILES::git show --name-only
+        run: |
+          echo ::set-env name=COMMITED_FILES::git show --name-only
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
       - run: dotnet format . --folder --include "${{ env.COMMITED_FILES }}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
