--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,7 +28,8 @@ jobs:
       - name: "list commited files"
         id: commited-files
         run: |
-          CF=git diff-tree --no-commit-id --name-only -r $GITHUB_SHA
+          SHORT_SHA=${GITHUB_SHA::8}
+          CF=$(git diff-tree --no-commit-id --name-only -r SHORT_SHA)
           CF="${CF//'%'/'%25'}"
           CF="${CF//$'\n'/'%0A'}"
           CF="${CF//$'\r'/'%0D'}"
