--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,4 +28,4 @@ jobs:
       - id: changed_files
         uses: jitterbit/get-changed-files@v1
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
-      - run: dotnet format . --folder --include "${{ steps.files.outputs.all }}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
+      - run: dotnet format . --folder --include ${{ steps.changed_files.outputs.all }} --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
