Updated pr message

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -95,9 +95,10 @@ jobs:
         uses: mshick/add-pr-comment@v1
         with:
           message: |
-            Test Coverage Results:
-            Sequence Coverage: ${{ env.SEQUENCE_COVERAGE }}
-            Branch Coverage: ${{ env.BRANCH_COVERAGE }}
+            Test Coverage Results for ${{ matrix.testMode }}:
+            Sequence Coverage: ${{ env.SEQUENCE_COVERAGE }}%
+            Branch Coverage: ${{ env.BRANCH_COVERAGE }}%
+            Link to run results: [https://github.com/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}](https://github.com/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }})
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
           allow-repeats: false # This is the default
