--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -18,10 +18,10 @@ jobs:
         unityVersion:
           - 2019.4.0f1
         platform:
-          - OSX       # Build a macOS standalone (Intel 64-bit).
-          - Windows   # Build a Windows standalone.
-          - Windows64 # Build a Windows 64-bit standalone.
-          - Linux64   # Build a Linux 64-bit standalone.
+          - StandaloneOSX       # Build a macOS standalone (Intel 64-bit).
+          - StandaloneWindows   # Build a Windows standalone.
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneLinux64   # Build a Linux 64-bit standalone.
         buildType:
           - Client
           - Server
@@ -40,7 +40,6 @@ jobs:
           key: Library-${{ matrix.platform }}-${{ hashFiles('Packages/manifest.json') }}-v.1.0
           restore-keys: |
             Library-${{ matrix.platform }}-
-            Library-
 
       - name: Cache git lfs
         uses: actions/cache@v2
@@ -58,9 +57,11 @@ jobs:
         with:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
-          buildMethod: EditorNamespace.ProdBuilder.${{ matrix.buildType }}_${{ matrix.platform }}
+          targetPlatform: ${{ matrix.platform }}
+          buildMethod: EditorNamespace.Builder.BuildProject	
+          customParameters: -buildType ${{ matrix.buildType }}
 
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.platform }}-${{ matrix.buildType }}
-          path: Builds/*
+          path: build
