--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,10 +1,7 @@
 name: dotnet-format
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-on:
-  pull_request:
-    branches:
-    - '**'      # matches every branch
+on: [pull_request] # This will run on every pull request. 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
