--- a/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
+++ b/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
@@ -4,6 +4,10 @@
         "Unity.Entities",
         "Unity.Entities.Tests",
         "Unity.Entities.Editor.Tests",
+        "Unity.Entities.Hybrid",
+        "Unity.Physics",
+        "Unity.Physics.Editor",
+        "Unity.Physics.Hybrid",
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "PropHunt.Tests.Utils",
