--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,21 +2,22 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ads": "3.4.5",
+    "com.unity.ads": "3.4.9",
     "com.unity.analytics": "3.3.5",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.entities": "0.11.1-preview.4",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.0",
+    "com.unity.collab-proxy": "1.3.9",
+    "com.unity.entities": "0.14.0-preview.19",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.multiplayer-hlapi": "1.0.6",
-    "com.unity.netcode": "0.2.0-preview.5",
-    "com.unity.physics": "0.4.0-preview.5",
-    "com.unity.purchasing": "2.0.6",
-    "com.unity.rendering.hybrid": "0.5.1-preview.18",
-    "com.unity.test-framework": "1.1.14",
+    "com.unity.netcode": "0.3.0-preview.3",
+    "com.unity.physics": "0.4.1-preview",
+    "com.unity.purchasing": "2.1.0",
+    "com.unity.rendering.hybrid": "0.8.0-preview.19",
+    "com.unity.test-framework": "1.1.16",
     "com.unity.testtools.codecoverage": "0.3.1-preview",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.6",
+    "com.unity.textmeshpro": "3.0.1",
+    "com.unity.timeline": "1.3.5",
     "com.unity.transport": "0.3.1-preview.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.4",
