--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.4.9",
     "com.unity.analytics": "3.3.5",
+    "com.unity.burst": "1.3.6",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.entities": "0.14.0-preview.19",
     "com.unity.ide.rider": "1.2.1",
