--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,6 +70,8 @@ jobs:
       - name: Find Coverage
         run: |
           echo ::set-env name=COVERAGE_FILE::$(find ${{ steps.tests.outputs.artifactsPath }} -name "TestCoverageResults_0000.xml")
+          ls -lah .
+          ls -lah ${{ steps.tests.outputs.artifactsPath }}
       
       - name: Sequence Coverage
         id: sequenceCoverage
