--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,10 +56,11 @@ jobs:
           unityVersion: ${{ matrix.unityVersion }}
           testMode: ${{ matrix.testMode }}
           artifactsPath: ${{ matrix.testMode }}-artifacts
-          # customParameters: |
-          #   -enableCodeCoverage
-          #   -coverageResultsPath ${{ matrix.testMode }}-artifacts
-          #   -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:-PropHunt.Test*,-EditModeTests,-Assembly*;pathFilters:-Assets/NetCodeGenerated/*
+          customParameters: |
+            -enableCodeCoverage
+            -coverageResultsPath ${{ matrix.testMode }}-artifacts
+            -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:-PropHunt.Test*,-EditModeTests,-Assembly*;pathFilters:-Assets/NetCodeGenerated/*
+            -nographics
 
       - name: Upload Results
         uses: actions/upload-artifact@v1
