--- a/Assets/Tests/Utils/PropHunt.Tests.Utils.asmdef
+++ b/Assets/Tests/Utils/PropHunt.Tests.Utils.asmdef
@@ -2,10 +2,14 @@
     "name": "PropHunt.Tests.Utils",
     "references": [
         "Unity.Entities",
-        "Unity.Entities.Tests",
         "Unity.Entities.Editor.Tests",
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner"
+        "Unity.Entities.Tests",
+        "Unity.Entities.Hybrid",
+        "Unity.Networking.Transport",
+        "Unity.NetCode",
+        "Unity.NetCode.Editor",
+        "UnityEditor.TestRunner",
+        "UnityEngine.TestRunner"
     ],
     "includePlatforms": [
         "Editor"
