--- a/Assets/NetCodeGenerated/PropHunt.Generated/PropHunt.Generated.asmdef
+++ b/Assets/NetCodeGenerated/PropHunt.Generated/PropHunt.Generated.asmdef
@@ -12,7 +12,7 @@
         "GUID:c38fb62397af04c51b143415e1db6d90",
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
         "GUID:eb8cf780bf058694ebf7ec5cf5b8cfa3",
-        "GUID:63afb046c8423dd448ae7aba042ea63d",
+        "Unity.Physics",
         "GUID:7a450cf7ca9694b5a8bfa3fd83ec635a",
         "Unity.Networking.Transport"
     ],
