--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,7 +12,7 @@
     "com.unity.ide.vscode": "1.2.2",
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.netcode": "0.4.0-preview.1",
-    "com.unity.physics": "0.5.0-preview.1",
+    "com.unity.physics": "0.4.1-preview",
     "com.unity.purchasing": "2.1.0",
     "com.unity.rendering.hybrid": "0.8.0-preview.19",
     "com.unity.test-framework": "1.1.16",
