--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,8 +13,14 @@
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.netcode": "0.4.0-preview.1",
     "com.unity.physics": "0.5.0-preview.1",
+    "com.unity.platforms": "0.8.0-preview.7",
+    "com.unity.platforms.desktop": "0.8.0-preview.7",
+    "com.unity.platforms.linux": "0.8.0-preview.7",
+    "com.unity.platforms.macos": "0.8.0-preview.7",
+    "com.unity.platforms.windows": "0.8.0-preview.7",
     "com.unity.purchasing": "2.1.0",
     "com.unity.rendering.hybrid": "0.8.0-preview.19",
+    "com.unity.scriptablebuildpipeline": "1.11.2",
     "com.unity.test-framework": "1.1.16",
     "com.unity.testtools.codecoverage": "0.3.1-preview",
     "com.unity.textmeshpro": "3.0.1",
