--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -20,6 +20,8 @@
     "com.unity.platforms.macos": "0.8.0-preview.7",
     "com.unity.platforms.windows": "0.8.0-preview.7",
     "com.unity.purchasing": "2.1.0",
+    "com.unity.quicksearch": "1.5.4",
+    "com.unity.render-pipelines.universal": "8.2.0",
     "com.unity.rendering.hybrid": "0.8.0-preview.19",
     "com.unity.scriptablebuildpipeline": "1.12.0",
     "com.unity.test-framework": "1.1.16",
