--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
         unityVersion:
           - 2020.1.5f1
         testMode:
-          - playmode
+          # - playmode
           - editmode
     steps:
       - uses: actions/checkout@v2
