--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -20,6 +20,9 @@ jobs:
       - uses: actions/checkout@v2
       # Lists only the commited files in order to evaluate only those.
       - id: changed_files
-        uses: jitterbit/get-changed-files@v1
+        uses: futuratrepadeira/changed-files@v3.2.1
+        with:
+          repo-token: ${{ github.token }}
+          pattern: '^.*\.(cs|CS)$'
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
-      - run: dotnet format . --folder --include ${{ steps.changed_files.outputs.all }} --exclude Assets/NetCodeGenerated Library --check # Call format but just do a check to see if everything is in order.
+      - run: dotnet format . --folder --include ${{ steps.changed_files.outputs.files_created }} ${{ steps.changed_files.outputs.files_updated }} --exclude Assets/NetCodeGenerated Library --check # Call format but just do a check to see if everything is in order.
